# ai-textify-bot

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  redis.conf  requirements.txt
.github/workflows/: deploy.yml  style.yml  tests.yml
alembic/: env.py
alembic/versions/: 2b4b6902e30c_initial_migration.py  9d9c704365a9_alter_user_id_to_biginteger.py
bot/: setup.py
bot/commands/: language.py  start.py  support.py
bot/handlers/: textify_handler.py  video_note_handler.py  voice_handler.py
database/: db.py  models.py
locales/: bg.json  de.json  en.json  es.json  fr.json  it.json  pl.json  ro.json  ru.json  sv.json  uk.json
services/: get_user_locale.py  rate_limiter.py  redis_client.py  send_language_page.py  transcription.py
tests/: test_transcription.py
