[project]
name = "ai-textify-bot"
version = "0.1.0"
description = "AI-powered Telegram bot"
requires-python = ">=3.11"

dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.20.0.post0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "alembic==1.16.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudconvert==2.1.0",
    "colorama==0.4.6",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "frozenlist==1.7.0",
    "fuzzywuzzy==0.18.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "magic-filter==1.0.12",
    "multidict==6.6.3",
    "openai==1.93.0",
    "propcache==0.3.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pydub==0.25.1",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
    "redis==6.2.0",
    "requests==2.32.4",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "urllib3==2.5.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "yarl==1.20.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "coverage",
    "mypy",
    "ruff",
    "python-Levenshtein",
    "types-requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bot", "services"]
